--- a/package.json
+++ b/package.json
@@ -46,9 +46,9 @@
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.7",
     "rollup": "0.34.7",
-    "rollup-plugin-buble": "0.12.1",
-    "rollup-plugin-commonjs": "3.0.0",
-    "rollup-plugin-json": "2.0.1",
+    "rollup-plugin-buble": "^0.14.0",
+    "rollup-plugin-commonjs": "^5.0.4",
+    "rollup-plugin-json": "^2.0.2",
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-stream": "1.8.0",
     "vinyl-buffer": "^1.0.0",
